# rusterd

./: .gitignore  Cargo.toml  LICENSE  README.md  issues.md
demo/: .gitignore  index.html  package.json  tsconfig.json
demo/src/: App.tsx
docs/: DSL-spec.md
examples/: 01_many_columns.erd  02_wide_horizontal.erd  03_long_names.erd  04_deep_hierarchy.erd  05_dense_relations.erd  06_unicode_cjk.erd  07_all_cardinalities.erd  08_mixed_sizes.erd  09_orphan_entities.erd  10_ecommerce_full.erd  11_arrangement.erd  11_ecommerce_full_hinted.erd  21_idp.erd  21_idp.sql  sample.erd  test.sql
src/: ast.rs  ir.rs  layout.rs  lexer.rs  lib.rs  main.rs  measure.rs  parser.rs  serializer.rs  svg.rs
src/layout/: analysis.rs  anchors.rs  corridor.rs  engine.rs  lanes.rs  mod.rs  placement.rs  routing.rs  types.rs  waypoints.rs
src/sql/: dialect.rs  lexer.rs  mod.rs  parser.rs  types.rs
