[package]
name = "rusterd"
version = "0.1.0"
edition = "2024"
description = "ER diagram DSL compiler - render ERD to SVG"
license = "MIT"
repository = "https://github.com/misebox/rusterd"
keywords = ["erd", "diagram", "svg", "wasm", "database"]
categories = ["visualization", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
unicode-width = "0.2"
thiserror = "2"
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
